Fixing text centering on buttons with letter spacing

--- a/public/styles/menu_button.css
+++ b/public/styles/menu_button.css
@@ -6,6 +6,7 @@
    font-weight: 700;
    font-size: 14px;
    letter-spacing: 5px;
+   text-indent: 0.8em;
    text-align: center;
    text-transform: uppercase;
    border-radius: 8px;
